--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <body>
     <pre>
         <hr color="blue" size="3" width="50%" align="left"><font size="4" color="red"><a
-        href="home.html">Home</a>       |      <a href="profil.html">Profil</a>      |     <a
-        href="about.html">About</a>     |   <a href="galery.html">Gallery</a>   |   <a href="kontak.html">Kontak</a></font><hr color="blue" size=3 width=50% align="left"> <font
+        href="Home.html">Home</a>       |      <a href="Profil.html">Profil</a>      |     <a
+        href="About.html">About</a>     |   <a href="Galery.html">Gallery</a>   |   <a href="kontak.html">Kontak</a></font><hr color="blue" size=3 width=50% align="left"> <font
 size=3>Assalammualaikum.Wr.Wb.
  Apakabar semua. Salam kenal ini adalah web perdanaku. Web ini berisi informasi tentang kegemaranku. <br> Semoga web ini dapat menginspirasi Anda pada waktu liburan. <a href="http://www.google.com">google</a>
  Silakan hubungi saya jika ada yang ingin didiskusikan <a href="mailto:mutiaramuslimah2103@gmail.com">email</a>
