--- a/Home.html
+++ b/Home.html
@@ -3,12 +3,69 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home</title>
+    <title>Contoh Hyperlink</title>
+    <style>
+      body {
+        text-align: center;
+        font-family: Arial, sans-serif;
+        background-color: lightgray; /* 🔹 warna background hitam */
+        color: white; /* 🔹 warna teks jadi putih agar kontras */
+        margin: 0;
+      }
+      body {
+        text-align: center;
+        font-family: Arial, sans-serif;
+      }
+
+      pre {
+        margin: 0;
+      }
+
+      pre font[size="4"] {
+        display: inline-block;
+        background-color: gray;
+        width: 100%;
+        padding: 5px 0;
+      }
+
+      hr {
+        color: white;
+        background-color: white;
+        height: 3px;
+        width: 100%;
+        border: none;
+        margin: 0 auto;
+      }
+
+      a {
+        color: white;
+        text-decoration: none;
+      }
+
+      a:hover {
+        text-decoration: underline;
+      }
+    </style>
   </head>
   <body>
-    <font face="montserrat" size="10" color="blue" align="center"
-      >Mutiara Portfolio</font
-    >
-    <hr color="Black" size="3" width="50%" align="center" />
+    <pre>
+        <hr color="blue" size="3" width="100%" align="center"><font size="4" color="white"><a
+        href="home.html">Home</a>       |      <a href="profil.html">Profil</a>      |     <a
+        href="about.html">About</a>     |   <a href="gallery.html">Gallery</a>   |   <a href="kontak.html">Kontak</a></font><hr color="blue" size=3 width=100% align="center"> 
+</p>
+    <p
+      style="
+        text-align: center;
+        font-family: 'Montserrat', sans-serif;
+        color: gray;
+      ">
+      Apakabar semua. Salam kenal ini adalah web perdanaku. Web ini berisi informasi
+tentang kegemaranku. Semoga web ini dapat menginspirasi Anda pada waktu liburan. <a href="http://www.google.com">google</a> 
+Silakan hubungi saya jika ada yang ingin didiskusikan <a
+href="mailto:mutiaramuslimah2103@gmail.com">email</a>
+    </p>            <div style="text-align: center;">
+  <img src="foto/Welcome To my portfolio.png" width="1000" height="300" alt="gambarku">
+    </pre>
+     
   </body>
 </html>
