--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
   <body>
     <pre>
         <hr color="blue" size="3" width="100%" align="center"><font size="4" color="white"><a
-        href="home.html">Home</a>       |      <a href="profil.html">Profil</a>      |     <a
-        href="about.html">About</a>     |   <a href="gallery.html">Gallery</a>   |   <a href="kontak.html">Kontak</a></font><hr color="blue" size=3 width=100% align="center"> 
+        href="home.html">Home</a>       |      <a href="Profil.html">Profil</a>      |     <a
+        href="About.html">About</a>     |   <a href="Gallery.html">Gallery</a>   |   <a href="Kontak.html">Kontak</a></font><hr color="blue" size=3 width=100% align="center"> 
 </p>
     <p
       style="
