--- a/Home.html
+++ b/Home.html
@@ -1,42 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blockbuster Movie</title>
-</head>
-<body>
-    <font color="navy" size=4>Selamat datang pada Bioskop kesayangan Anda</font><br>
-    Minggu ini kami akan mempersembahkan film-film yang pernah mendapat piala
-    didunia perfilman
-<ol type="A">
-    <li>Dibalik sajadah panjang</li>
-    <li>Bulan terbelah di langit Mataran (1957)</li>
-    <li>Ada apa dengan Cinta (1962)</li>
-    <li>Mutiara dari Selatan</li>
-    <li>Serangan Fajar (1965)</li>
-    <li>Citra(1970)</li>
-</ol>
-
-<blockquote>
-Informasi ini dibuat oleh Programmer
-</blockquote>
-Suhu Udara saat ini:
-<ul type="circle">
-    <li>36 derajat Jakarta</li>
-    <li>40 derajat Semarang</li>
-    <li>39 derajat Surabaya</li>
-    <li>35 derajat Bogor</li>
-    <li>Berawan</li>
-</ul>
-Prosedur:
-<ol type="1">
-    <li>Cuci seluruh bahan hingga bersih.</li>
-    <li>Masukkan dalam penggorengan yang sudah panas.</li>
-    <li>Goreng selama 10 menit.</li>
-    <li>Jika sudah berwarna kecoklatan angkat.</li>
-</ol>
-</body>
-</html>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Home</title>
+  </head>
+  <body>
+    <body bgcolor="gray">
+    <p
+      style="
+        text-align: center;
+        font-family: 'Montserrat', sans-serif;
+        font-size: 60px;
+        color: white;
+      "
+    >
+      Mutiara Portfolio
+    </p>
+    <hr color="white" size="5" width="50%" align="center" />
+    <p
+      style="
+        text-align: center;
+        font-family: 'Montserrat', sans-serif;
+        color: white;
+      "
+    >
+      Hai, saya Mutiara Muslimah 👋 Seorang mahasiswa Bisnis Digital Universitas
+      Ma'soem dan <br />
+      Saya seorang desainer grafis yang berfokus pada desain konten digital
+      seperti logo, Instagram post, carousel, dan berbagai design lainnya.<br />
+      Saya suka membuat karya visual yang menarik dan bermakna.
+    </p>
+    <br>
+    <div style="text-align: center;">
+  <img src="foto/Mutifoto.png" width="400" height="400" alt="gambarku">
+  <br>
+  <p
+      style="
+        text-align: center;
+        font-family: 'Montserrat', sans-serif;
+        font-size: 60%;
+        color: white;
+      "
+    >
+kembali ke <a href="index.html">Halaman Utama</a>
+    </p>
 </body>
 </html>
